# release-flow

./: Cargo.toml  README.md  action.yml
.github/workflows/: release.yml
src/: git.rs  github.rs  main.rs  version.rs
